--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.goeuro</groupId>
-	<artifactId>cityquery</artifactId>
+	<artifactId>citysearch</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>cityquery</name>
-	<description>query the city data from the city search api</description>
+	<name>citysearch</name>
+	<description>provides an API for querying city data</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
